# M-Code

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  smoke-test.sh  tsconfig.app.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
e2e/: chat-stream.spec.ts  session-persistence.spec.ts  tool-permission.spec.ts  visual.spec.ts
scripts/: perf-bench.sh
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  handlers.rs  keychain.rs  lib.rs  main.rs  sessions.rs  stream.rs
src-tauri/src/commands/: mod.rs  pick_folder.rs
src-tauri/src/provider/: anthropic.rs  gemini.rs  mod.rs  openai.rs
src-tauri/src/tools/: agents.rs  agents_rules.rs  checkpoint.rs  code_graph.rs  diff_preview.rs  doc_index.rs  error_diagnosis.rs  file_sync.rs  git.rs  github_oauth.rs  global_memory.rs  hooks.rs  image_gen.rs  impact_analysis.rs  index.rs  lsp_regex.rs  mcp.rs  memory.rs  mod.rs  multi_edit.rs  perf_analyzer.rs  review_store.rs  search.rs  semantic.rs  skills.rs  ssh.rs  terminal.rs  test_runner.rs  triggers.rs  web.rs
src-tauri/src/tools/lsp/: client.rs  framing.rs  mod.rs  position.rs  registry.rs
src/agent/: index.ts  loop.test.ts  loop.ts  parallelEvents.test.ts  parallelEvents.ts  sessionMessages.test.ts  sessionMessages.ts  state.ts  systemPrompt.ts  toolExecutor.ts  (+5 more)
(+137 files in other folders)
